menambahkan css header

--- a/newslennaai.html
+++ b/newslennaai.html
@@ -17,6 +17,7 @@
 
 
     <style>
+        /* header  */
          .dropdown-menu{
             background: linear-gradient(to bottom, darkblue,blue);
         }
