--- a/newslenaai2.html
+++ b/newslenaai2.html
@@ -14,6 +14,7 @@
 
 
     <style>
+        /* header  */
         .dropdown-menu {
             background: linear-gradient(to bottom, darkblue, blue);
         }
