menambahkah style header

--- a/newslennaai.html
+++ b/newslennaai.html
@@ -25,6 +25,10 @@
         .dropdown-menu a{
             color: violet;
         }
+
+        .nav-item a:hover{
+            text-shadow: 0px 3px 3px red;
+        }
         /* akhir */
         
         .pagination a {
