--- a/newslenaai2.html
+++ b/newslenaai2.html
@@ -23,6 +23,10 @@
             color: violet;
         }
 
+        .nav-item a:hover{
+            text-shadow: 0px 3px 3px red;
+        }
+
         /* akhir */
 
         .pagination a {
