menambahkan color hr

--- a/newslenaai2.html
+++ b/newslenaai2.html
@@ -149,7 +149,7 @@
                             <a class="dropdown-item" href="#">Chatbot Platform</a>
                             <a class="dropdown-item" href="#">Omnichat CS</a>
                             <a class="dropdown-item" href="#">Digital Helper</a>
-                            <hr>
+                            <hr style="background-color: white;"> 
                             <a class="dropdown-item" href="#">Lenna Assistant</a>
                         </div>
                     </li>
