--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item active mr-5">
-                            <a class="nav-link text-light" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link text-light" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item btn-group mr-5">
                             <button type="button" class="text-light btn  dropdown-toggle dropdown-toggle-split"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Product</button>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Chatbot Platform</a>
+                                <a class="dropdown-item" href="products.html">Chatbot Platform</a>
                                 <a class="dropdown-item" href="#">Omnichat CS</a>
                                 <a class="dropdown-item" href="#">Digital Helper</a>
                                 <div class="dropdown-divider"></div>
@@ -134,7 +134,7 @@
                             <button type="button" class=" text-light btn  dropdown-toggle dropdown-toggle-split"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solution</button>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">LennaEdu</a>
+                                <a class="dropdown-item" href="solutions.html">LennaEdu</a>
                                 <a class="dropdown-item" href="#">LennaHealth</a>
                                 <a class="dropdown-item" href="#">LennaFinance</a>
                                 <a class="dropdown-item" href="#">LennaCommerce</a>
@@ -150,7 +150,7 @@
                             </div>
                         </li>
                         <li class="nav-item mr-5">
-                            <a class="nav-link text-light" href="#">News</a>
+                            <a class="nav-link text-light" href="newslennaai.html">News</a>
                         </li>
                         <li class="nav-item btn-group ">
                             <button type="button" class="text-light btn  dropdown-toggle dropdown-toggle-split"
