--- a/products.html
+++ b/products.html
@@ -282,7 +282,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active mx-4">
-                    <a style="color: white;" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a style="color: white;" class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown mx-4">
                     <a style="color: white;" class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
@@ -290,7 +290,7 @@
                         Product
                     </a>
                     <div style="border-radius: 10px;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Chatbot Platform</a>
+                        <a class="dropdown-item" href="products.html">Chatbot Platform</a>
                         <a class="dropdown-item" href="#">Omnichat CS</a>
                         <a class="dropdown-item" href="#">Digital Helper</a>
                         <hr style="background-color: white;">
@@ -303,7 +303,7 @@
                         Solutions
                     </a>
                     <div style="border-radius: 10px;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Lenna Edu</a>
+                        <a class="dropdown-item" href="solutions.html">Lenna Edu</a>
                         <a class="dropdown-item" href="#">Lenna Health</a>
                         <a class="dropdown-item" href="#">Lenna Finance</a>
                         <a class="dropdown-item" href="#">Lenna Commerce</a>
